--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "doc:build": "styleguidist build",
     "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
     "#snyk-protect": "snyk protect",
-    "#prepare": "npm run snyk-protect"
+    "#prepare": "npm run snyk-protect",
+    "prepare": "npm run build"
   },
   "files": [
     "/dist",
